@@ -90,11 +90,3 @@ vfs-methods/fontilus/fontilus.schemas.in
 vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/gnome-font-viewer.desktop.in.in
 vfs-methods/fontilus/thumbnailer.c
-vfs-methods/themus/apply-font.glade
-vfs-methods/themus/theme-method.c
-vfs-methods/themus/theme-method.directory.in
-vfs-methods/themus/themus-properties-main.c
-vfs-methods/themus/themus-properties-view.c
-vfs-methods/themus/themus.schemas.in
-vfs-methods/themus/themus-theme-applier.c
-vfs-methods/themus/themus-theme-applier.desktop.in.in
