@@ -1,3 +1,8 @@
+2008-06-16  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* POTFILES.in:
+	* POTFILES.skip: skip themus files
+
 2008-06-11  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
